force-app/main/default/objects/Consumivel_de_comodato__c/Consumivel_de_comodato__c.object-meta.xml
<CustomObject>
    <label>Consumível de comodato</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumíveis de comodato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>