force-app/main/default/objects/Consumivel_de_comodato__c/fields/C_digo__c.field-meta.xml
<CustomField>
    <fullName>C_digo__c</fullName>
    <formula>Produto__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código</label>
    <type>Text</type>
</CustomField>