force-app/main/default/objects/Consumivel_de_comodato__c/fields/Comodato__c.field-meta.xml
<CustomField>
    <fullName>Comodato__c</fullName>
    <label>Comodato</label>
    <referenceTo>Demonstracao__c</referenceTo>
    <relationshipLabel>Consumíveis do comodato</relationshipLabel>
    <relationshipName>Consumiveis_de_comodato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>