force-app/main/default/objects/Consumivel_de_comodato__c/fields/N_Comodato__c.field-meta.xml
<CustomField>
    <fullName>N_Comodato__c</fullName>
    <formula>Comodato__r.Name + &apos; - &apos; +  Comodato__r.Cliente__c + &apos; - Início: &apos; + IF(
DAY(Comodato__r.Data_prevista__c) &lt; 10,
&apos;0&apos; &amp; TEXT(DAY(Comodato__r.Data_prevista__c)),
TEXT(DAY(Comodato__r.Data_prevista__c))
)
+ &quot;/&quot; +
IF(
MONTH(Comodato__r.Data_prevista__c) &lt; 10,
&apos;0&apos; &amp; TEXT(MONTH(Comodato__r.Data_prevista__c)),
TEXT(MONTH(Comodato__r.Data_prevista__c))
)
+ &quot;/&quot; +
TEXT(YEAR(Comodato__r.Data_prevista__c)) +
&apos; - Final: &apos; + IF(
DAY(Comodato__r.Data_Final__c) &lt; 10,
&apos;0&apos; &amp; TEXT(DAY(Comodato__r.Data_Final__c)),
TEXT(DAY(Comodato__r.Data_Final__c))
)
+ &quot;/&quot; +
IF(
MONTH(Comodato__r.Data_Final__c) &lt; 10,
&apos;0&apos; &amp; TEXT(MONTH(Comodato__r.Data_Final__c)),
TEXT(MONTH(Comodato__r.Data_Final__c))
)
+ &quot;/&quot; +
TEXT(YEAR(Comodato__r.Data_Final__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nº Comodato</label>
    <type>Text</type>
</CustomField>