force-app/main/default/objects/Consumivel_de_comodato__c/fields/Qtd_total_do_contrato__c.field-meta.xml
<CustomField>
    <fullName>Qtd_total_do_contrato__c</fullName>
    <formula>Quantidade__c * CEILING(Comodato__r.Quantidade_de_meses__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qtd total do contrato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>