force-app/main/default/objects/Consumivel_de_comodato__c/fields/Qtd_total_no_ano__c.field-meta.xml
<CustomField>
    <fullName>Qtd_total_no_ano__c</fullName>
    <formula>(13 - MONTH(Comodato__r.Data_prevista__c)) *  Quantidade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qtd total no ano</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>