force-app/main/default/objects/Consumivel_de_comodato__c/fields/Quantidade_vinculada__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_vinculada__c</fullName>
    <label>Quantidade vinculada</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>