force-app/main/default/objects/Consumivel_de_comodato__c/fields/Valor_unitario__c.field-meta.xml
<CustomField>
    <fullName>Valor_unitario__c</fullName>
    <label>Valor unitário</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>