force-app/main/default/objects/Consumivel_de_comodato__c/validationRules/Qtd_vinculada.validationRule-meta.xml
<ValidationRule>
    <fullName>Qtd_vinculada</fullName>
    <active>true</active>
    <errorConditionFormula>Quantidade__c &lt;  Quantidade_vinculada__c</errorConditionFormula>
    <errorMessage>Quantidade vinculada não pode ser maior que a quantidade</errorMessage>
</ValidationRule>