force-app/main/default/objects/Consumivel_de_comodato__c/validationRules/Quantidade_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantidade_0</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
Quantidade__c = 0,
ISNULL(Quantidade__c),
ISBLANK(Quantidade__c)
)</errorConditionFormula>
    <errorDisplayField>Quantidade__c</errorDisplayField>
    <errorMessage>A quantidade não pode ser 0.</errorMessage>
</ValidationRule>